fix card-save alignment

--- a/_sass/components/_cards.scss
+++ b/_sass/components/_cards.scss
@@ -70,8 +70,8 @@ a.card {
     width: 40px;
     height: 40px;
     position: absolute;
-    bottom: 40px;
     right: 0;
+    margin-top: -40px;
     background-color: white;
     label {
         text-indent: 100%;
